# SingleApplication

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  FreeStandingSingleApplication  LICENSE  README.md  SingleApplicationConfig.cmake.in  TODO  Version.cmake  Windows.md  annotated.html  annotated_dup.js  appveyor.yml  classSingleApplication-members.html  classSingleApplication.html  classSingleApplication.js  classes.html  files.html  files_dup.js  functions.html  functions_enum.html  functions_eval.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  localserver.cpp  localserver.h  main.cpp  md_CHANGELOG.html  md_Windows.html  menudata.js  message_coder.cpp  message_coder.h  navtreedata.js  navtreeindex0.js  pages.html  singleapplication.cpp  singleapplication.h  (+9 more)
.github/: FUNDING.yml
.github/scripts/: integration-tests.js  run-integration-tests.js
.github/workflows/: build-cmake.yml  build-linux-cmake.yml  build.yml  doxygen.yml  main.yml
doxygen/: header.html
examples/basic/: CMakeLists.txt  main.cpp
examples/calculator/: CMakeLists.txt  main.cpp
examples/sending_arguments/: CMakeLists.txt  main.cpp
examples/separate_object/: CMakeLists.txt  main.cpp  messagereceiver.cpp  messagereceiver.h  separate_object.pro
examples/windows_raise_widget/: CMakeLists.txt  main.cpp  windows_raise_widget.pro
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
